Update all quizzes

--- a/experiment/breadth-first-traversal/simulation/css/commonstyle.css
+++ b/experiment/breadth-first-traversal/simulation/css/commonstyle.css
@@ -3,9 +3,6 @@ html,body {
   position:relative;
 }
 
-
-
-
 #title{
   font-size: 20px;
   width: 60%;
@@ -13,7 +10,6 @@ html,body {
   margin-left: 20%;
   border-bottom: thin solid black;
 }
-
 
 .buttons {
   top:45vw;
@@ -24,7 +20,8 @@ html,body {
   overflow: auto;
   z-index: 1;  
  }
-.buttons button{
+
+ .buttons button{
   z-index: 1;
   border-radius: 50vw;
   width: 12%;
@@ -35,7 +32,7 @@ html,body {
   padding: 1%;
   text-align: center;
   text-decoration: none;
-  font-size: 1.5vw;
+  /* font-size: 1.5vw; */
   font-family: arial;
   margin-left: 2%;
   margin-right: 2%; 
@@ -74,7 +71,7 @@ html,body {
 
 #que{
   position: relative;
-  font-size: 1.7vw;
+  /* font-size: 1.7vw; */
   }
 
 
@@ -91,5 +88,4 @@ html,body {
   width: 19%;
   height:5vh;
   cursor:pointer;
-
 }
