--- a/experiment/depth-first-traversal/simulation/css/style.css
+++ b/experiment/depth-first-traversal/simulation/css/style.css
@@ -26,7 +26,7 @@
     padding: 1%;
     border-radius: 20px;
     font-family: arial;
-    font-size: 1.5vw;
+    /* font-size: 1.5vw; */
     text-align: center;
     background-color: #f2f1f0;
     border: 1px solid black;
